# css-sanitizer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
benches/: sanitize.rs
examples/: rewrite_classes.rs  sanitize_strings.rs
src/: builder.rs  lib.rs  policy.rs  rewrite.rs  sanitize.rs
tests/: ast_api_tests.rs  declaration_policy_tests.rs  function_security_tests.rs  integration.rs  rewrite_api_tests.rs  security_audit_tests.rs  stylesheet_policy_tests.rs
tests/common/: mod.rs
xtask/src/: main.rs
