[package]
name = "css-sanitizer"
version = "0.1.0"
edition = "2024"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
repository = "https://github.com/levish0/css-sanitizer"
rust-version = "1.93.0"
license = "Apache-2.0"
description = "Policy-driven CSS sanitization on top of lightningcss"
keywords = ["css", "sanitizer", "security", "xss", "allowlist"]
categories = ["web-programming", "parser-implementations"]

[workspace]
members = ["xtask"]

[dependencies]
lightningcss = { version = "=1.0.0-alpha.71", features = ["visitor"] }
